--- a/views/assets/site/css/style.css
+++ b/views/assets/site/css/style.css
@@ -70,6 +70,11 @@
 .page .content_page {
   font-size: 16px;
 }
+.page .content_page img {
+  vertical-align: middle;
+  padding-right: 12px;
+  padding-bottom: 6px;
+}
 
 /* Mega menu */
 .sub_menu {
