--- a/views/assets/site/css/style.css
+++ b/views/assets/site/css/style.css
@@ -37,6 +37,115 @@
   box-sizing: border-box;
 }
 
+.images_agrupadas {
+  margin: 40px 0;
+}
+
+.images_agrupadas .principal {
+  position: relative;
+}
+.images_agrupadas .principal p {
+  position: absolute;
+  top: 0;
+  background-color: #000;
+  color: #fff;
+  font-size: 22px;
+  font-weight: bold;
+  text-align: right;
+  padding-left: 86px;
+  padding-right: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+.images_agrupadas .principal img {
+  width: 100%;
+  height: 745px;
+  object-fit: cover;
+}
+
+.images_agrupadas .menores ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+.images_agrupadas .menores ul li p {
+  position: absolute;
+  bottom: 0;
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 2px 2px 2px #000;
+  color: #fff;
+}
+.images_agrupadas .menores ul li {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.images_agrupadas .menores ul li img {
+  transition: all 0.5s ease-in-out;
+  width: 100%;
+  height: 376px;
+  object-fit: cover;
+}
+.images_agrupadas .menores ul li img:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+/* Pop-up */
+.popup_wrap .closeBtn:hover,
+.popup_wrap .closeBtn:focus {
+  text-decoration: none;
+}
+.popup_wrap .closeBtn span {
+  font-size: 22px;
+  color: #fff;
+}
+.popup_wrap .closeBtn {
+  background-color: var(--kia-preto-noturno);
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.popup_wrap {
+  width: 742px;
+  height: auto;
+  border: 1px solid var(--kia-preto-noturno);
+  position: fixed;
+  z-index: 9999;
+  background: #fff;
+  top: 25%;
+  transform: translateX(50%);
+  right: 50%;
+  padding: 0;
+}
+
+.popup_wrap .pop_con dl dt {
+  font-size: 18px;
+}
+
+.popup_wrap .pop_con dl dt,
+.popup_wrap .pop_con dl dd {
+  padding: 8px 0;
+}
+.popup_wrap .pop_con dl {
+  padding: 2px 16px;
+}
+
+.popup_wrap .pop_con img {
+  width: 100%;
+  height: 442px;
+  object-fit: cover;
+}
+
 /* Botão topo */
 
 .topo {
