--- a/views/assets/site/css/style.css
+++ b/views/assets/site/css/style.css
@@ -37,6 +37,31 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Kia-Medium";
+}
+
+.titleColumnTwoDetailCar {
+  font-size: 24px;
+  font-family: "Kia-Bold";
+  color: #000;
+}
+
+.titleColumnDetailCar {
+  font-size: 38px;
+  font-family: "Kia-Bold";
+  color: #000;
+}
+
+.descriptionDetailCar {
+  color: #000;
+  line-height: 30px;
+  font-size: 16px;
+}
+.wrapImage {
+  overflow: hidden;
+}
+
 .images_agrupadas {
   margin: 40px 0;
 }
@@ -272,8 +297,12 @@
 .img_fluid_car {
   position: relative;
 }
+.img-responsive.two_columns:hover {
+  transform: scale(1.1);
+}
 .img-responsive.two_columns {
   object-fit: cover;
+  transition: all 0.5s ease-in-out;
   width: 100%;
   height: 354px;
 }
