--- a/views/assets/site/css/style.css
+++ b/views/assets/site/css/style.css
@@ -627,6 +627,45 @@ footer p.icon_socials a {
 }
 
 /* Card car*/
+/* FOCO */
+
+.wrap_cards_car ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.wrap_cards_car ul li {
+  cursor: pointer;
+  overflow: hidden;
+  border: 1px solid #000;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  position: relative;
+  z-index: 1;
+}
+.wrap_cards_car ul li img {
+  transition: all 0.5s ease-in-out;
+}
+.wrap_cards_car ul li img:hover {
+  transform: scale(1.1);
+}
+.wrap_cards_car ul li p {
+  background-color: #fff;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  height: 26px;
+  margin-top: -10px;
+  line-height: 42px;
+  height: 40px;
+  border-top: 1px solid #000;
+  font-family: "Kia-Bold";
+  font-size: 20px;
+  letter-spacing: -1px;
+  position: relative;
+  z-index: 2;
+}
+
 .wrap_card_car {
   font-family: "Kia-Medium";
   border: 1px solid #000;
@@ -671,26 +710,29 @@ footer p.icon_socials a {
 }
 
 /* Itens car */
-.itens_car {
+.itens_car ul {
   list-style: none;
   max-width: 100%;
-  margin: 36px auto;
   text-align: left;
   padding: 0 6px;
   line-height: 34px;
-  font-size: 18px;
+  font-size: 12px;
+}
+.itens_car li {
+  line-height: 24px;
 }
 .itens_car li::before {
   content: "\f054";
   font-family: "FontAwesome";
   color: #000;
+  margin-right: 4px;
 }
 
 .btn--veja--mais {
   background-color: #000;
   border: #000;
   color: #fff;
-  margin: 46px 0px;
+  margin-bottom: 8px;
 }
 
 /* Form */
