--- a/views/assets/site/css/custom-flexslider.css
+++ b/views/assets/site/css/custom-flexslider.css
@@ -54,7 +54,7 @@
 #slider.flexslider .flex-viewport ul li img {
   object-fit: cover;
   max-width: 100%;
-  height: 90vh;
+  height: 666px;
 }
 
 #carousel.flexslider .flex-viewport ul li img {
@@ -86,10 +86,7 @@
   transform: translate(-50%, -50%);
 }
 .custom-navigation a img {
-  width: 120px;
   cursor: pointer;
-  -webkit-filter: drop-shadow(2px 3px 9px rgba(0, 0, 0, 0.3));
-  opacity: 0.7;
 }
 /*  */
 
