--- a/views/assets/site/css/style.css
+++ b/views/assets/site/css/style.css
@@ -41,6 +41,36 @@ body {
   font-family: "Kia-Medium";
 }
 
+/*Redes Sociais*/
+
+.socialNetworks:hover{
+  transform: translateX(8px);
+}
+.socialNetworks {
+	transition: all 0.5s ease-in-out;
+	background-color: #fff;
+	position: fixed;
+	bottom: 20px;
+	padding: 10px 10px;
+	border-radius: 0 6px 6px 0;
+	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+	z-index: 3;
+	left: 0;
+	margin-left: -8px;
+}
+.socialNetworks p {
+  margin: 0;
+}
+.socialNetworks a {
+  margin-right: 10px;
+  text-decoration: none;
+}
+.socialNetworks a img{
+  height:32px ;
+}
+
+/**/
+
 .titleColumnTwoDetailCar {
   font-size: 24px;
   font-family: "Kia-Bold";
