--- a/views/assets/site/css/style-mobile.css
+++ b/views/assets/site/css/style-mobile.css
@@ -1,7 +1,6 @@
 /** Hide */
 @media (max-width: 576px) {
   .header_info .container .row {
-    /* display: flex; */
     flex-wrap: wrap;
   }
   .header_info .container .row div {
@@ -11,6 +10,25 @@
 
   .navbar-nav > li > a {
     font-size: 14px !important;
+  }
+
+  .wrap_cards_car ul li img {
+    object-fit: cover;
+    width: 100%;
+    height: 100px;
+  }
+  .wrap_cards_car ul li {
+    margin: 2px 1px;
+    width: 170px;
+  }
+  .wrap_cards_car ul {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  #pixlee_container {
+    height: auto;
+    overflow: hidden;
   }
   /**/
 
