--- a/views/assets/site/css/style.css
+++ b/views/assets/site/css/style.css
@@ -41,6 +41,23 @@ body {
   font-family: "Kia-Medium";
 }
 
+/* Custom Cookies */
+
+.cookies-content {
+  max-width: 96% !important;
+  box-shadow: 0 1px 13px rgba(0, 0, 0, 0.6);
+  padding: 3rem 1rem;
+}
+.cookies-save {
+  background-color: red;
+  font-size: 1.2em;
+  padding: 0.8rem 3rem;
+}
+.cookies-pref {
+  display: none;
+}
+/**/
+
 .tableSearch tbody tr td a {
   color: #666;
 }
