Adicionando detalhes no dash - home

--- a/views/assets/site/css/style.css
+++ b/views/assets/site/css/style.css
@@ -41,6 +41,9 @@ body {
   font-family: "Kia-Medium";
 }
 
+.flexslider.cars.hideFlexControlNav .flex-control-nav {
+  display: none;
+}
 /* Paginas internas */
 .wrapInternalImage {
   position: relative;
