--- a/views/assets/site/css/style.css
+++ b/views/assets/site/css/style.css
@@ -108,17 +108,20 @@ body {
 }
 
 .wrapCardsCar .viewCar:hover div .openBox {
-  opacity: 1;
+  /* opacity: 1; */
+  transform: translateY(0);
 }
 
 .wrapCardsCar .viewCar div {
-  margin-top: -30px;
+  margin-top: 0px;
+  overflow: hidden;
 }
 .wrapCardsCar .viewCar div .openBox {
   display: flex;
   justify-content: center;
   transition: all 0.2s ease-in-out;
-  opacity: 0;
+  /* opacity: 0; */
+  transform: translateY(-100%);
 }
 
 .wrapCardsCar .viewCar div .openBox a:hover {
